samples/_failures_safe/1761667924_69e001_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9f705a5.c: In function ‘main’:
./samples/SAFE/__tmp_e9f705a5.c:162:17: error: expected expression at end of input
  162 |                 if (
      |                 ^~
./samples/SAFE/__tmp_e9f705a5.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e9f705a5.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e9f705a5.c:162:17: error: expected declaration or statement at end of input
